# cruise-scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_ui.yml  ci.yml  scrape_cronjob.yml
data/: cruise_prices.csv
data/processed/: cruises_cleaned_20250826_172237.json  cruises_cleaned_20250827_032521.json  cruises_cleaned_20250828_033821.json  cruises_cleaned_20250828_232127.json  cruises_cleaned_20250828_233533.json  cruises_cleaned_20250828_235213.json  cruises_cleaned_20250829_054237.json  cruises_cleaned_20250902_152121.json  cruises_cleaned_20250904_052826.json  cruises_cleaned_20250907_054621.json  cruises_cleaned_20250910_044542.json  cruises_cleaned_20250910_170131.json  cruises_cleaned_20250911_050832.json  cruises_cleaned_20250912_050437.json  cruises_cleaned_20250913_050002.json
docs/: index.html
reports/: dashboard.html
src/: main.py
src/scraper/: parser.py  royal_caribbean.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: cruise_prices.csv
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: Snapshot.tsx
