[project]
name = "cruise-scanner"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.9"

[tool.uv]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
# Globally ignore long lines if needed elsewhere; otherwise keep empty and rely on per-file ignore.
ignore = []

[tool.ruff.lint.per-file-ignores]
"royal_caribbean.py" = ["E501"]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.1",
  "ruff>=0.12.10",
]
